feat: templates de projeto e outros fix